testsuite/tests/properties/invalid_new/missing_field/test.lkt
from common import FooNode, MyStruct

class BarNode: FooNode {
    fun prop(): MyStruct = MyStruct(a=12)
}
